// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note component renders a .Note by default 1`] = `
<div
  className="Note"
>
  <h2
    className="Note__title"
  >
    <Link
      to="/note/undefined"
    />
  </h2>
  <button
    className="Note__delete"
    type="button"
  >
    remove
  </button>
</div>
`;

exports[`Note component renders the Note given props 1`] = `
<div
  className="Note"
>
  <h2
    className="Note__title"
  >
    <Link
      to="/note/a"
    >
      test-class-name
    </Link>
  </h2>
  <button
    className="Note__delete"
    type="button"
  >
    remove
  </button>
  <div
    className="Note__dates"
  >
    <div
      className="Note__dates-modified"
    >
      Modified
       
      <span
        className="Date"
      >
        15th Jan 2019
      </span>
    </div>
  </div>
</div>
`;
